--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/defaultFontColor</item>
+        <item name="android:textAppearance">@style/AppTheme.DefaultTextAppearance</item>
+        <item name="android:buttonStyle">@style/AppTheme.Button</item>
+
+        <item name="buttonStyle">@style/AppTheme.Button</item>
+
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -13,8 +19,28 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.DefaultTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/defaultFontColor</item>
+        <item name="android:textViewStyle">@style/AppTheme.TextView</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="AppTheme.TextView">
+        <item name="android:textAppearance">@style/AppTheme.DefaultTextAppearance</item>
+    </style>
+
+    <style name="AppTheme.Button">
+        <item name="android:textSize">14sp</item>
+        <item name="android:minHeight">40dp</item>
+        <item name="android:padding">14dp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="fontPath">fonts/OpenSans-Bold.ttf</item>
+        <item name="android:background">@drawable/default_button</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
 
 </resources>
